--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <article>VIDEOS 1</article>
             <article>VIDEOS 2</article>
             <article>VIDEOS 3</article>
+            <article>VIDEOS 4</article>
         </main>
     </div>
 </div>
