--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                         <li>KSLV DISASTER</li>
                         <li>47 REMIX</li>
                         <li>VOZSA</li>
+                        <li>ANUEL</li>
             </ul>
     </nav>
 <div>   
